--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PORORO LAND</title>
 
+  <link rel="icon" type="image/png" href="./src/img/pororo.png">
   <link rel="stylesheet" href="./src/css/bootstrap.css" />
   <link rel="stylesheet" href="./src/css/style.css">
 
