--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Welcome to PORORO LAND This server is for fun, playing games with friends, listening music and more.">
   <title>PORORO LAND</title>
 
   <link rel="icon" type="image/png" href="./src/img/pororo.png">
