add meta tag image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Welcome to PORORO LAND This server is for fun, playing games with friends, listening music and more.">
+  <meta itemprop="image"
+    content="https://cdn.discordapp.com/attachments/674881313639104522/718007080249851924/custom_1.png">
   <title>PORORO LAND</title>
 
   <link rel="icon" type="image/png" href="./src/img/pororo.png">
