--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Welcome to PORORO LAND This server is for fun, playing games with friends, listening music and more.">
+  <meta itemprop="name" content="PORORO LAND | Discord Server">
+  <meta itemprop="description"
+    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more">
   <meta itemprop="image"
-    content="https://cdn.discordapp.com/attachments/674881313639104522/718007080249851924/custom_1.png">
+    content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
   <title>PORORO LAND</title>
 
   <link rel="icon" type="image/png" href="./src/img/pororo.png">
