add new meta tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more">
   <meta itemprop="image"
     content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:url" value="https://top.gg/servers/643410260425703456" />
+  <meta name="twitter:title" content="PORORO LAND | Discord Server" />
+  <meta name="twitter:description"
+    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more" />
+  <meta name="twitter:image"
+    content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
+
+  <meta property="og:url" content="https://top.gg/servers/643410260425703456">
+  <meta property="og:image"
+    content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
+  <meta property="og:description"
+    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more">
+  <meta property="og:title" content="PORORO LAND">
+  <meta property="og:site_name" content="Discord Servers">
+
+  <meta name="description"
+    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more" />
   <title>PORORO LAND</title>
 
   <link rel="icon" type="image/png" href="./src/img/pororo.png">
