--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top time">
     <div class="container">
       <a class="navbar-brand">PORORO LAND</a>
-      <div class="navbar-nav">
-        <a class="nav-item">Member Count </a>
-      </div>
+
     </div>
   </nav>
   <div class="banner">
@@ -69,7 +67,7 @@
       <hr>
     </div>
     <div class="embedchannel">
-      <iframe src="https://discordapp.com/widget?id=643410260425703456&theme=dark" width="800" height="500"
+      <iframe src="https://discordapp.com/widget?id=643410260425703456&theme=dark" width="100%" height="600"
         allowtransparency="true" frameborder="0"></iframe>
     </div>
     <div class="title">
@@ -77,8 +75,7 @@
       <hr>
     </div>
     <div class="embedshop">
-      <widgetbot server="643410260425703456" channel="718795404132483124" width="800" height="500"
-        shard="https://e.widgetbot.io"></widgetbot>
+      <widgetbot server="643410260425703456" channel="718795404132483124" width="100%" height="600"></widgetbot>
     </div>
   </div>
   <footer class="footerr">
@@ -92,6 +89,6 @@
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 <script src="./src/js/jquery-3.5.1.min.js"></script>
 <script src="./src/js/style.js"></script>
-<script src="./src/js/con.js"></script>
+<script src="./src/js/conn.js"></script>
 
 </html>
