--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p class="lead">
           Welcome to PORORO LAND <br>
           This server is for fun, playing games <br>
-          with friends, listening music and more.
+          with friends, listening music, Game news and more.
         </p>
         <div class="btn-join">
           <a href="https://discord.gg/zA3wvrv"><button type="button" class="btn btn-light btn-join-now">JOIN
@@ -65,9 +65,13 @@
     <div class="title">
       <span>FIND US ON DISCORD</span>
       <hr>
+      <p class="subspan">If you have any problem do not hesitate to contact us, we will do our best to help, also if you
+        want information or simply want to be <br>
+        a member of the community join our discord group.
+      </p>
     </div>
     <div class="embedchannel">
-      <iframe src="https://discordapp.com/widget?id=643410260425703456&theme=dark" width="100%" height="600"
+      <iframe src="https://discordapp.com/widget?id=643410260425703456&theme=dark" width="80%" height="600"
         allowtransparency="true" frameborder="0"></iframe>
     </div>
     <div class="title">
@@ -75,7 +79,20 @@
       <hr>
     </div>
     <div class="embedshop">
-      <widgetbot server="643410260425703456" channel="718795404132483124" width="100%" height="600"></widgetbot>
+      <widgetbot server="643410260425703456" channel="718795404132483124" width="80%" height="600"></widgetbot>
+    </div>
+  </div>
+  <div class="feedback">
+    <div class="container">
+      <h1 class="display">SEND YOUR FEEDBACK <img src="./src/img/YuriSmug.png" width="50px"></h1>
+      <p class="dsplay-feedback">
+        We need feedback from you guys to help improve <br>
+        Server quality and PORORO LAND website.
+      </p>
+      <div class="btn-join">
+        <a href="https://forms.gle/nqFJoBavyRiY5HAH7"><button type="button" class="btn btn-light btn-join-now">CLICK
+            HERE</button></a>
+      </div>
     </div>
   </div>
   <footer class="footerr">
@@ -84,6 +101,7 @@
       <p>2020 © PORORO LAND . All rights reserved</p>
     </div>
   </footer>
+
   <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
