--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta itemprop="name" content="PORORO LAND | Discord Server">
   <meta itemprop="description"
-    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more">
+    content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
   <meta itemprop="image"
     content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
 
@@ -14,7 +14,7 @@
   <meta name="twitter:url" value="https://top.gg/servers/643410260425703456" />
   <meta name="twitter:title" content="PORORO LAND | Discord Server" />
   <meta name="twitter:description"
-    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more" />
+    content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
   <meta name="twitter:image"
     content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
 
@@ -22,12 +22,12 @@
   <meta property="og:image"
     content="https://cdn.discordapp.com/icons/643410260425703456/238432d2ff3bf48d483936af2ab4c0ae.png">
   <meta property="og:description"
-    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more">
+    content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
   <meta property="og:title" content="PORORO LAND">
   <meta property="og:site_name" content="Discord Servers">
 
   <meta name="description"
-    content="Ohayou, Welcome to PORORO LAND, This server is for fun, playing games with friends, listening music and more" />
+    content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
   <title>PORORO LAND</title>
 
   <link rel="icon" type="image/png" href="./src/img/pororo.png">
@@ -36,6 +36,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
