--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <footer class="footerr">
     <div class="container">
       <hr class="footer">
-      <p>2020 © PORORO LAND . All rights reserved</p>
+      <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by PORORO LAND</p>
     </div>
   </footer>
 
