--- a/index.html
+++ b/index.html
@@ -64,6 +64,24 @@
     </div>
   </div>
   <div class="container">
+    <div class="row card-bot">
+      <div class="col-md-5 d-flex">
+        <div class="section-card flex">
+          <div class="section-card-icon-left">
+            <img src="./src/img/pororo.png" width="150px" class="image-fluid" alt="Web App">
+          </div>
+          <div class="section-card-content">
+            <div class="font-weight-bold mb-2 text-md bot">PORORO LAND <span>BOT</span></div>
+            <p class="text-sm2">BOT STATUS : ONLINE</p>
+            <div class="btn-join">
+              <a href="#" class="btn btn-coming">COMING SOON</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
     <div class="title">
       <span>FIND US ON DISCORD</span>
       <hr>
