--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         Server quality and PORORO LAND website.
       </p>
       <div class="btn-join">
-        <a href="/form/form.html"><button type="button" class="btn btn-light btn-join-now">CLICK
+        <a href="/form/feedback.html"><button type="button" class="btn btn-light btn-join-now">CLICK
             HERE</button></a>
       </div>
     </div>
