--- a/stream/stream.html
+++ b/stream/stream.html
@@ -43,7 +43,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top time">
         <div class="container">
-            <a href="/index.html" class="navbar-brand">PORORO LAND</a>
+            <a href="/index.html" class="navbar-brand">PORORO STREAM BETA</a>
         </div>
     </nav>
     <div class="banner">
