--- a/stream/stream.html
+++ b/stream/stream.html
@@ -50,8 +50,8 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <div class="stream">
-                    <iframe style="border: 10px solid #F5CD79;" width="1024" height="576"
-                        src="/src/img/pororo_stream.png" frameborder="0"
+                    <iframe style="border: 10px solid #F5CD79;" width="100%" height="576"
+                        src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A?controls=1;autoplay=1" frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
@@ -65,6 +65,6 @@
 <script src="/src/js/jquery-3.5.1.min.js"></script>
 <script src="/src/js/style.js"></script>
 <script src="/src/js/conn.js"></script>
-<!-- https://www.youtube-nocookie.com/embed/3VcHEGID5Sw?controls=0;autoplay=1 -->
+
 
 </html>
