add tag meta stream

--- a/stream/stream.html
+++ b/stream/stream.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta itemprop="name" content="PORORO LAND | Discord Server">
+    <meta itemprop="name" content="PORORO LAND | Stream">
     <meta itemprop="description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
     <meta itemprop="image"
@@ -12,7 +12,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:url" value="https://top.gg/servers/643410260425703456" />
-    <meta name="twitter:title" content="PORORO LAND | Discord Server" />
+    <meta name="twitter:title" content="PORORO LAND | Stream" />
     <meta name="twitter:description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
     <meta name="twitter:image"
@@ -24,7 +24,7 @@
     <meta property="og:description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
     <meta property="og:title" content="PORORO LAND">
-    <meta property="og:site_name" content="Discord Servers">
+    <meta property="og:site_name" content="Streams">
 
     <meta name="description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
