add new package

--- a/stream/stream.html
+++ b/stream/stream.html
@@ -65,6 +65,7 @@
 <script src="/src/js/jquery-3.5.1.min.js"></script>
 <script src="/src/js/style.js"></script>
 <script src="/src/js/conn.js"></script>
+<!-- /src/img/pororo_stream.png 595.5 95.6%-->
 
 
 </html>
