--- a/index.html
+++ b/index.html
@@ -45,7 +45,20 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top time">
     <div class="container">
       <a class="navbar-brand">PORORO LAND</a>
-
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./stream/stream.html">Stream</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./event/eventlist.html">Event</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
   <div class="banner">
@@ -124,10 +137,10 @@
   </footer>
 
   <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
+  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+  <script src="./src/js/jquery-3.5.1.min.js"></script>
+  <script src="./src/js/style.js"></script>
+  <script src="./src/js/bootstrap.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
-<script src="./src/js/jquery-3.5.1.min.js"></script>
-<script src="./src/js/style.js"></script>
-<script src="./src/js/conn.js"></script>
 
 </html>
