--- a/stream/stream.html
+++ b/stream/stream.html
@@ -50,9 +50,9 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <div class="stream">
-                    <iframe style="border: 10px solid #F5CD79;" width="100%" height="576"
-                        src="https://www.youtube-nocookie.com/embed/5qap5aO4i9A?controls=1;autoplay=1" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    <iframe style="border: 10px solid #54a0ff;" width="100%" height="576"
+                        src="https://www.youtube.com/embed/5qap5aO4i9A?origin=https://plyr.io&iv_load_policy=3&modestbranding=1&playsinline=1&showinfo=0&rel=0&enablejsapi=1&autoplay=1"
+                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
             </div>
