--- a/stream/stream.html
+++ b/stream/stream.html
@@ -58,8 +58,38 @@
             </div>
         </div>
     </div>
-
-    <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
+    <div class="container">
+        <div class="title">
+            <span>DONATION</span>
+            <hr>
+            <p class="subspan">
+                Support kami dengan berdonasi melalui <a href="https://saweria.co/pororoland"><span>link ini</span></a>
+                atau scan QR Code dibawah ini.
+            </p>
+        </div>
+        <div class="col-12">
+            <iframe width="100%" height="95"
+                src="https://saweria.co/overlays/recent?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&color=%23333&fontWeight=500&text=dukung+di+https%3A%2F%2Fsaweria.co%2Fpororoland"
+                frameborder="0"></iframe>
+        </div>
+        <div class="col-12">
+            <iframe width="100%" height="150"
+                src="https://saweria.co/overlays/alert?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&highlightColor=%23744fc9&color=%23333&fontWeight=500&notificationTimeout=5000"
+                frameborder="0"></iframe>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <iframe width="100%" height="355"
+                    src="https://saweria.co/overlays/qr?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&bottomLabel=PORORO+LAND&backgroundColor=%23faae2b&barcodeColor=%23000&username=pororoland"
+                    frameborder="0"></iframe>
+            </div>
+            <div class="col-md-6">
+                <iframe width="100%" height="150"
+                    src="https://saweria.co/overlays/leaderboard?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&color=%23333&fontWeight=500&title=Leaderboard&mode=all"
+                    frameborder="0"></iframe>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 <script src="/src/js/jquery-3.5.1.min.js"></script>
