add new donation box

--- a/stream/stream.html
+++ b/stream/stream.html
@@ -90,6 +90,12 @@
             </div>
         </div>
     </div>
+    <footer class="footerr">
+        <div class="container">
+            <hr class="footer">
+            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by PORORO LAND</p>
+        </div>
+    </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 <script src="/src/js/jquery-3.5.1.min.js"></script>
