add new donation box

--- a/stream/stream.html
+++ b/stream/stream.html
@@ -63,7 +63,8 @@
             <span>DONATION</span>
             <hr>
             <p class="subspan">
-                Support kami dengan berdonasi melalui <a href="https://saweria.co/pororoland"><span>link ini</span></a>
+                Support kami dengan berdonasi melalui <a href="https://saweria.co/pororoland" target="_blank"><span>link
+                        ini</span></a>
                 atau scan QR Code dibawah ini.
             </p>
         </div>
