--- a/event/turnament-valorant.html
+++ b/event/turnament-valorant.html
@@ -43,18 +43,45 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top time">
         <div class="container">
-            <a href="/index.html" class="navbar-brand">PORORO LAND TURNAMENT</a>
+            <a href="/index.html" class="navbar-brand">PORORO LAND VALORANR CUP</a>
         </div>
     </nav>
     <div class="banner">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <div class="form">
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="des">
+                            PORORO LAND VALORANT CUP SEASON 1 <br>
+                            PRIZEPOOL : RP. 800.000 ( BISA BERUBAH , SESUAI SLOT) <br>
+                            FEE REGIST : 50K/ SLOT (16 SLOT) <br>
+                            MULTISLOT : OFF <br>
+                            PLAYTIME : 24 - 26 JUNI 2020 <br>
+                            REGIST CLOSED AT : 25 JUNI 2020 <br><br>
+                            SELAMA TURNAMENT PESERTA WAJIB MENGGUNAKAN DISCORD OFFICIAL PORORO LAND SILAHKAN JOIN DENGAN
+                            MENGGUNAKAN
+                            <a href="https://discord.gg/zA3wvrv"><span>LINK INI</span></a><br><br>
+                            SILAHKAN DAFTAR MENGGUNAKAN <a href="https://forms.gle/1t8ntzak22RFAYzM9"
+                                target="_blank"><span>LINK
+                                    INI</span></a><br><br>
+                            CONTACT : <br>
+                            1. 082153941209 (WA Only) <br>
+                            2. 081242502971 (Wa Only) <br><br>
+                            PEMBAYARAN : <br>
+                            BNI, OVO
 
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="img-valorant">
+                            <img src="/src/img/valorant-cup.png" alt="" width="120%">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 
     <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 </body>
