--- a/event/eventlist.html
+++ b/event/eventlist.html
@@ -49,14 +49,27 @@
     <div class="banner">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <div class="event-list-judul">
-                    <h2>Event list</h3>
-                        <hr class="hro">
+                <div class="col-12 event-list-judul">
+                    <h2>Event list</h2>
+                    <hr class="hro">
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 col-6 d-flex align-items-stretch">
+                <a class="link-teks" href="./turnament-valorant.html">
+                    <div class="card event-card">
+                        <img src="/src/img/valorant-cup.png" alt="valorant-cup" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">PORORO LAND Valorant Cup</h5>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
     <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
