--- a/event/eventlist.html
+++ b/event/eventlist.html
@@ -61,7 +61,7 @@
             <div class="col-md-3 col-6 d-flex align-items-stretch">
                 <a class="link-teks" href="./turnament-valorant.html">
                     <div class="card event-card">
-                        <img src="/src/img/valorant-cup.png" alt="valorant-cup" class="card-img-top">
+                        <img src="/src/img/valorant-cup-min.png" alt="valorant-cup" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">PORORO LAND Valorant Cup</h5>
                         </div>
