--- a/event/turnament-valorant.html
+++ b/event/turnament-valorant.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-md-5">
                         <div class="img-valorant">
-                            <img src="/src/img/valorant-cup.png" alt="" width="120%">
+                            <img src="/src/img/valorant-cup-min.png" alt="" width="120%">
                         </div>
                     </div>
                 </div>
