--- a/event/turnament-valorant.html
+++ b/event/turnament-valorant.html
@@ -24,7 +24,7 @@
     <meta property="og:description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
     <meta property="og:title" content="PORORO LAND">
-    <meta property="og:site_name" content="TURNAMENTs">
+    <meta property="og:site_name" content="TURNAMENT">
 
     <meta name="description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
