--- a/event/turnament-valorant.html
+++ b/event/turnament-valorant.html
@@ -58,9 +58,18 @@
                             MULTISLOT : OFF <br>
                             PLAYTIME : 24 - 26 JUNI 2020 <br>
                             REGIST CLOSED AT : 23 JUNI 2020 <br><br>
-                            SELAMA TURNAMENT PESERTA WAJIB MENGGUNAKAN DISCORD OFFICIAL PORORO LAND SILAHKAN JOIN DENGAN
-                            MENGGUNAKAN
-                            <a href="https://discord.gg/zA3wvrv"><span>LINK INI</span></a><br><br>
+                            Rules:<br>
+                            1. Minimal 6 player (termasuk 1 player cadangan).<br>
+                            2. NO BAN PLAYERS / TEAMS.<br>
+                            3. NO CHEATING (Jika diketahui cheating maka akan di diskualifikasi).<br>
+                            4. Jika peserta telat, maka team akan di diskualifikasi.<br>
+                            5. Semua pelayer harus siap 10 menit sebelum pertandingan dimulai.<br>
+                            6. Jika kamu mempunyai pertanyaan silahkan chat panitia.<br>
+                            7. Pemain harus berada dalam Discord <a href="https://discord.gg/zA3wvrv"><span>PORORO
+                                    LAND</span></a><br><br>
+
+                            technical meeting akan dilakukan sebelum pertandingan dimulai
+                            <br><br>
                             SILAHKAN DAFTAR MENGGUNAKAN <a href="https://forms.gle/1t8ntzak22RFAYzM9"
                                 target="_blank"><span>LINK
                                     INI</span></a><br><br>
@@ -68,7 +77,7 @@
                             1. 082153941209 (WA Only) <br>
                             2. 081242502971 (Wa Only) <br><br>
                             PEMBAYARAN : <br>
-                            BNI, OVO
+                            BNI, OVO <br>
 
                         </div>
                     </div>
@@ -81,8 +90,12 @@
             </div>
         </div>
     </div>
-
-
+    <footer class="footerrr">
+        <div class="container">
+            <hr class="footer">
+            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by PORORO LAND</p>
+        </div>
+    </footer>
     <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
