--- a/event/turnament-valorant.html
+++ b/event/turnament-valorant.html
@@ -43,7 +43,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top time">
         <div class="container">
-            <a href="/index.html" class="navbar-brand">PORORO LAND VALORANR CUP</a>
+            <a href="/index.html" class="navbar-brand">PORORO LAND VALORANT CUP</a>
         </div>
     </nav>
     <div class="banner">
