--- a/stream/stream.html
+++ b/stream/stream.html
@@ -37,6 +37,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.2/plyr.css" />
 
 </head>
 
@@ -47,47 +48,52 @@
         </div>
     </nav>
     <div class="banner">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <div class="stream">
-                    <iframe style="border: 10px solid #54a0ff;" width="100%" height="576"
-                        src="https://www.youtube.com/embed/5qap5aO4i9A?origin=https://plyr.io&iv_load_policy=3&modestbranding=1&playsinline=1&showinfo=0&rel=0&enablejsapi=1&autoplay=1"
-                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
+        <div class="jumbotron jumbotron-fluid" style="z-index: -1;">
+        </div>
+    </div>
+    <div class="container">
+        <div class="stream">
+            <div class="plyr__video-embed" id="player" style="--plyr-color-main: #ffbb46;">
+                <iframe width="100%" height="576"
+                    src="https://www.youtube.com/embed/5qap5aO4i9A?origin=https://plyr.io&iv_load_policy=3&modestbranding=1&playsinline=1&showinfo=0&rel=0&enablejsapi=1&autoplay=1"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </div>
     <div class="container">
-        <div class="title">
-            <span>DONATION</span>
-            <hr>
-            <p class="subspan">
-                Support kami dengan berdonasi melalui <a href="https://saweria.co/pororoland" target="_blank"><span>link
-                        ini</span></a>
-                atau scan QR Code dibawah ini.
-            </p>
-        </div>
-        <div class="col-12">
-            <iframe width="100%" height="95"
-                src="https://saweria.co/overlays/recent?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&color=%23333&fontWeight=500&text=dukung+di+https%3A%2F%2Fsaweria.co%2Fpororoland"
-                frameborder="0"></iframe>
-        </div>
-        <div class="col-12">
-            <iframe width="100%" height="150"
-                src="https://saweria.co/overlays/alert?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&highlightColor=%23744fc9&color=%23333&fontWeight=500&notificationTimeout=5000"
-                frameborder="0"></iframe>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <iframe width="100%" height="355"
-                    src="https://saweria.co/overlays/qr?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&bottomLabel=PORORO+LAND&backgroundColor=%23faae2b&barcodeColor=%23000&username=pororoland"
+        <div class="donation">
+            <div class="title">
+                <span>DONATION</span>
+                <hr>
+                <p class="subspan">
+                    Support kami dengan berdonasi melalui <a href="https://saweria.co/pororoland"
+                        target="_blank"><span>link
+                            ini</span></a>
+                    atau scan QR Code dibawah ini.
+                </p>
+            </div>
+            <div class="col-12">
+                <iframe width="100%" height="95"
+                    src="https://saweria.co/overlays/recent?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&color=%23333&fontWeight=500&text=dukung+di+https%3A%2F%2Fsaweria.co%2Fpororoland"
                     frameborder="0"></iframe>
             </div>
-            <div class="col-md-6">
+            <div class="col-12">
                 <iframe width="100%" height="150"
-                    src="https://saweria.co/overlays/leaderboard?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&color=%23333&fontWeight=500&title=Leaderboard&mode=all"
+                    src="https://saweria.co/overlays/alert?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&highlightColor=%23744fc9&color=%23333&fontWeight=500&notificationTimeout=5000"
                     frameborder="0"></iframe>
+            </div>
+            <div class="row">
+                <div class="col-md-6 qr">
+                    <iframe width="90%" height="355"
+                        src="https://saweria.co/overlays/qr?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&bottomLabel=PORORO+LAND&backgroundColor=%23faae2b&barcodeColor=%23000&username=pororoland"
+                        frameborder="0"></iframe>
+                </div>
+                <div class="col-md-6">
+                    <iframe width="100%" height="150"
+                        src="https://saweria.co/overlays/leaderboard?streamKey=70c93c882e3ac1ad4ad4d2f60815e576&backgroundColor=%23faae2b&color=%23333&fontWeight=500&title=Leaderboard&mode=all"
+                        frameborder="0"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -102,6 +108,10 @@
 <script src="/src/js/jquery-3.5.1.min.js"></script>
 <script src="/src/js/style.js"></script>
 <script src="/src/js/conn.js"></script>
+<script src="https://cdn.plyr.io/3.6.2/plyr.polyfilled.js"></script>
+<script>
+    const player = new Plyr('#player');
+</script>
 <!-- /src/img/pororo_stream.png 595.5 95.6%-->
 
 
