--- a/stream/stream.html
+++ b/stream/stream.html
@@ -55,7 +55,7 @@
         <div class="stream">
             <div class="plyr__video-embed" id="player" style="--plyr-color-main: #ffbb46;">
                 <iframe width="100%" height="576"
-                    src="https://www.youtube.com/embed/5qap5aO4i9A?origin=https://plyr.io&iv_load_policy=3&modestbranding=1&playsinline=1&showinfo=0&rel=0&enablejsapi=1&autoplay=1"
+                    src="https://www.youtube.com/embed/KfQTkrD1Las?origin=https://plyr.io&iv_load_policy=3&modestbranding=1&playsinline=1&showinfo=0&rel=0&enablejsapi=1&autoplay=1"
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
