--- a/event/eventlist.html
+++ b/event/eventlist.html
@@ -63,7 +63,17 @@
                     <div class="card event-card">
                         <img src="/src/img/valorant-cup-min.png" alt="valorant-cup" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">PORORO LAND Valorant Cup</h5>
+                            <h5 class="card-title">PLVC S1</h5>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-6 d-flex align-items-stretch">
+                <a class="link-teks" href="./turnament-pubgm.html">
+                    <div class="card event-card">
+                        <img src="/src/img/pubgm-cup-min.jpg" alt="valorant-cup" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">PLPMC S1</h5>
                         </div>
                     </div>
                 </a>
