--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./event/eventlist.html">Event</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./event/eventlist.html">Bracket</a>
+          </li>
         </ul>
       </div>
     </div>
