--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a class="nav-link" href="./event/eventlist.html">Event</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./event/eventlist.html">Bracket</a>
+            <a class="nav-link" href="./event/bracket.html">Bracket</a>
           </li>
         </ul>
       </div>
