--- a/event/bracket.html
+++ b/event/bracket.html
@@ -52,7 +52,7 @@
                 <div class="row">
                     <div class="col-md-7">
                         <div class="des">
-                            <iframe src="https://brackethq.com/b/af4f/embed/" width="185%" height="1150"
+                            <iframe src="https://brackethq.com/b/af4f/embed/?zoom=0" width="185%" height="1150"
                                 frameborder="0"></iframe>
                         </div>
                     </div>
