--- a/event/turnament-valorant-s2.html
+++ b/event/turnament-valorant-s2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta itemprop="name" content="PORORO LAND | EVENT LIST">
+    <meta itemprop="name" content="PORORO LAND | TURNAMENT">
     <meta itemprop="description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
     <meta itemprop="image"
@@ -12,7 +12,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:url" value="https://top.gg/servers/643410260425703456" />
-    <meta name="twitter:title" content="PORORO LAND | EVENT LIST" />
+    <meta name="twitter:title" content="PORORO LAND | TURNAMENT" />
     <meta name="twitter:description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
     <meta name="twitter:image"
@@ -24,7 +24,7 @@
     <meta property="og:description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more.">
     <meta property="og:title" content="PORORO LAND">
-    <meta property="og:site_name" content="EVENT LIST">
+    <meta property="og:site_name" content="TURNAMENT">
 
     <meta name="description"
         content="Ohayou, Welcome to PORORO LAND This server is for fun, playing games with friends, listening music, Game news and more." />
@@ -43,53 +43,55 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top time">
         <div class="container">
-            <a href="/index.html" class="navbar-brand">PORORO LAND</a>
+            <a href="/index.html" class="navbar-brand">PORORO LAND VALORANT CUP</a>
         </div>
     </nav>
     <div class="banner">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <div class="col-12 event-list-judul">
-                    <h2>Event list</h2>
-                    <hr class="hro">
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="des">
+                            PORORO LAND VALORANT CUP SEASON 2 <br>
+                            PRIZEPOOL : RP. 2.000.000 ( BISA BERUBAH , SESUAI SLOT) <br>
+                            FEE REGIST : 75K/ SLOT (32 SLOT) <br>
+                            MULTISLOT : ON <br>
+                            PLAYTIME : 26 - 30 JULI 2020 <br>
+                            REGIST CLOSED AT : 25 JULI 2020 <br><br>
+                            Rules:<br>
+                            1. Minimal 6 player (termasuk 1 player cadangan).<br>
+                            2. NO CHEATING (Jika diketahui cheating maka akan di diskualifikasi).<br>
+                            3. Jika peserta telat, maka team akan di diskualifikasi.<br>
+                            4. Semua pelayer harus siap 10 menit sebelum pertandingan dimulai.<br>
+                            5. Jika kamu mempunyai pertanyaan silahkan chat panitia.<br>
+                            6. Perwakilan team harus berada di discord pororo land untuk mengikuti technical
+                            meeting <a href="https://discord.gg/zA3wvrv" target="_blank"><span>JOIN</span></a><br><br>
+
+                            technical meeting akan dilakukan sebelum pertandingan dimulai
+                            <br><br>
+                            SILAHKAN DAFTAR MENGGUNAKAN <a href="https://bit.ly/pororo-form" target="_blank"><span>LINK
+                                    INI</span></a><br><br>
+                            CONTACT : <br>
+                            1. 082153941209 (WA Only) <br>
+                            2. 081242502971 (Wa Only) <br><br>
+                            PEMBAYARAN : <br>
+                            BNI, OVO <br>
+
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="img-valorant">
+                            <img src="/src/img/valorant-cup-s2.jpg" alt="" width="120%">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3 col-6 d-flex align-items-stretch">
-                <a class="link-teks" href="./turnament-valorant.html">
-                    <div class="card event-card">
-                        <img src="/src/img/valorant-cup-min.png" alt="valorant-cup" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">PLVC S1</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 col-6 d-flex align-items-stretch">
-                <a class="link-teks" href="./turnament-pubgm.html">
-                    <div class="card event-card">
-                        <img src="/src/img/pubgm-cup-min.jpg" alt="valorant-cup" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">PLPMC S1</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-3 col-6 d-flex align-items-stretch">
-                <a class="link-teks" href="./turnament-pubgm.html">
-                    <div class="card event-card">
-                        <img src="/src/img/valorant-cup-s2.jpg" alt="valorant-cup" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">PLVC S2</h5>
-                        </div>
-                    </div>
-                </a>
-            </div>
+    <footer class="footerrr">
+        <div class="container">
         </div>
-    </div>
+    </footer>
     <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
