--- a/event/eventlist.html
+++ b/event/eventlist.html
@@ -79,7 +79,7 @@
                 </a>
             </div>
             <div class="col-md-3 col-6 d-flex align-items-stretch">
-                <a class="link-teks" href="./turnament-pubgm.html">
+                <a class="link-teks" href="./turnament-valorant-s2.html">
                     <div class="card event-card">
                         <img src="/src/img/valorant-cup-s2.jpg" alt="valorant-cup" class="card-img-top">
                         <div class="card-body">
