--- a/event/turnament-valorant-s2.html
+++ b/event/turnament-valorant-s2.html
@@ -65,7 +65,8 @@
                             4. Semua pelayer harus siap 10 menit sebelum pertandingan dimulai.<br>
                             5. Jika kamu mempunyai pertanyaan silahkan chat panitia.<br>
                             6. Perwakilan team harus berada di discord pororo land untuk mengikuti technical
-                            meeting <a href="https://discord.gg/zA3wvrv" target="_blank"><span>JOIN</span></a><br><br>
+                            meeting <a href="https://bit.ly/pororo-discord"
+                                target="_blank"><span>JOIN</span></a><br><br>
 
                             technical meeting akan dilakukan sebelum pertandingan dimulai
                             <br><br>
