--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./event/eventlist.html">Event</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="./event/bracket.html">Bracket</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -91,7 +91,8 @@
             <div class="font-weight-bold mb-2 text-md bot">PORORO LAND <span>BOT</span></div>
             <p class="text-sm2">BOT STATUS : ONLINE</p>
             <div class="btn-join">
-              <a href="#" class="btn btn-coming">COMING SOON</a>
+              <a href="https://discord.com/api/oauth2/authorize?client_id=681111215191490562&permissions=0&scope=bot"
+                class="btn btn-coming">Add to Discord</a>
             </div>
           </div>
         </div>
@@ -112,11 +113,11 @@
         allowtransparency="true" frameborder="0"></iframe>
     </div>
     <div class="title">
-      <span>SHOP</span>
+      <span>GAME INFO</span>
       <hr>
     </div>
     <div class="embedshop">
-      <widgetbot server="643410260425703456" channel="718795404132483124" width="80%" height="600"></widgetbot>
+      <widgetbot server="643410260425703456" channel="678638072757223550" width="80%" height="600"></widgetbot>
     </div>
   </div>
   <div class="feedback">
